--- a/MyToolsTemplate.csproj
+++ b/MyToolsTemplate.csproj
@@ -23,6 +23,10 @@
 	<ItemGroup>
 		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="SpicyTaco.AutoGrid" Version="1.2.29" />
 		<PackageReference Include="TqkLibrary.Linq" Version="1.0.0-build20230728165743" />
 		<PackageReference Include="TqkLibrary.WpfUi" Version="1.0.0-build20230728174404" />
