--- a/MyToolsTemplate.csproj
+++ b/MyToolsTemplate.csproj
@@ -48,4 +48,10 @@
 		</Compile>
 	</ItemGroup>
 
+	<ItemGroup>
+		<EmbeddedResource Update="Resource.resx">
+		  <Generator>ResXFileCodeGenerator</Generator>
+		  <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
 </Project>
