--- a/MyToolsTemplate.csproj
+++ b/MyToolsTemplate.csproj
@@ -5,6 +5,7 @@
 		<TargetFrameworks>net6.0-windows7.0</TargetFrameworks>
 		<LangVersion>12.0</LangVersion>
 		<UseWPF>true</UseWPF>
+		<Nullable>enable</Nullable>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<PathMap>$(MSBuildProjectDirectory)=$(MSBuildProjectName)</PathMap>
 		<TransformOnBuild Condition="$(Configuration) == 'Release'">true</TransformOnBuild>
@@ -22,12 +23,14 @@
 
 	<ItemGroup>
 		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<!-- <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference> -->
-		<PackageReference Include="SpicyTaco.AutoGrid" Version="1.2.29" />
+		<!-- <PackageReference Include="SpicyTaco.AutoGrid" Version="1.2.29" /> -->
+		<PackageReference Include="TqkLibrary.AutoGrid" Version="1.2.29" />
 		<PackageReference Include="TqkLibrary.Linq" Version="1.0.0-build20231030102212" />
 		<!-- <PackageReference Include="TqkLibrary.Queues" Version="1.0.0-build20230814174501" /> -->
 		<PackageReference Include="TqkLibrary.WpfUi" Version="1.0.0-build20231206155222" />
