--- a/MyToolsTemplate.csproj
+++ b/MyToolsTemplate.csproj
@@ -50,6 +50,11 @@
 			<AutoGen>True</AutoGen>
 			<DependentUpon>SingletonBuildDate.tt</DependentUpon>
 		</Compile>
+		<Compile Update="Resource.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Resource.resx</DependentUpon>
+		</Compile>
 	</ItemGroup>
 
 	<ItemGroup>
