--- a/MyToolsTemplate.csproj
+++ b/MyToolsTemplate.csproj
@@ -33,7 +33,11 @@
 		<!-- <PackageReference Include="SpicyTaco.AutoGrid" Version="1.2.29" /> -->
 		<PackageReference Include="TqkLibrary.AutoGrid" Version="1.2.29" />
 		<PackageReference Include="TqkLibrary.Linq" Version="1.0.0-build20240325150111" />
+		<PackageReference Include="TqkLibrary.Net.Proxy" Version="1.0.2-build20241018181503" />
+		<PackageReference Include="TqkLibrary.Proxy" Version="1.0.0-build20240727163214" />
+		<PackageReference Include="TqkLibrary.SeleniumSupport" Version="1.0.0-build20240616130145" />
 		<PackageReference Include="TqkLibrary.Utils" Version="1.0.0-build20240415170434" />
+		<PackageReference Include="TqkLibrary.WinApi" Version="1.0.0-build20241112190453" />
 		<!-- <PackageReference Include="TqkLibrary.Queues" Version="1.0.0-build20240416101957" /> -->
 		<PackageReference Include="TqkLibrary.WpfUi" Version="1.0.0-build20240628170930" />
 	</ItemGroup>
