--- a/MyToolsTemplate.csproj
+++ b/MyToolsTemplate.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.0" />
 		<PackageReference Include="Microsoft-WindowsAPICodePack-Shell-6.0" Version="1.1.6" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+		<PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
 		<!-- <PackageReference Include="Newtonsoft.Json" Version="13.0.1" /> -->
 		<!-- <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3">
 			<PrivateAssets>all</PrivateAssets>
